--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <body>
     <header class="header">
       <div class="filters">
+        <input class="search-bar" id="search-bar"type="text" placeholder="Search Here"/>
+        <button class="submit-btn" id="submit-btn">Search</button>
         <div class="clear">Clear</div>
       </div>
     </header>
@@ -24,7 +26,6 @@
     <main>
       <div class="jobs"></div>
     </main>
-    <script src="script.js"></script>
   <div class="attribution" style="text-align: center;">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Scott Phan</a>.
